--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="theme_primary">#04561A</color>
+    <color name="theme_primary_dark">#002c00</color>
+    <color name="theme_accent">#FFB74D</color>
 </resources>
