--- a/app/src/main/res/layout/eventlist_item.xml
+++ b/app/src/main/res/layout/eventlist_item.xml
@@ -1,53 +1,71 @@
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
-
-    <ImageView
-        android:id="@+id/eventImage"
-        android:layout_width="68dp"
-        android:layout_height="68dp"
-        card_view:layout_constraintBottom_toBottomOf="parent"
-        card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="parent"
-        android:paddingLeft="10dp"
-        android:elevation="4dp"
-        card_view:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
-
-    <TextView
-        android:id="@+id/eventName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:paddingTop="30dp"
-        card_view:layout_constraintStart_toEndOf="@+id/eventImage"
-        card_view:layout_constraintTop_toTopOf="parent"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
-        android:textSize="18sp"
-        />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:layout_marginTop="4dp"
-        android:paddingRight="4dp"
-        android:text="TextViewTextViewTextViewTextVView"
-        android:forceHasOverlappingRendering="false"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintStart_toEndOf="@+id/eventImage"
-        card_view:layout_constraintTop_toBottomOf="@+id/eventName" />
-
-    <View
+    android:layout_height="200dp"
+    android:background="@color/cardview_back_color"
+    >
+    <androidx.cardview.widget.CardView
+        android:id="@+id/eventCardView"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorPrimary"
-        android:elevation="4dp"
+        android:layout_height="190dp"
+        android:elevation="2dp"
+        android:layout_margin="5dp"
         card_view:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.64"
+        tools:layout_editor_absoluteX="0dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/eventImage"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:elevation="4dp"
+                android:paddingLeft="10dp"
+                android:layout_gravity="center_vertical"
+                card_view:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="70dp"
+                    android:layout_height="27dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="right"
+                    card_view:srcCompat="@android:drawable/star_on" />
+                <TextView
+                    android:id="@+id/eventName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Android Name"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                <TextView
+                    android:id="@+id/textViewVersion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:paddingLeft="3dp"
+                    android:text="Android Version Android VersionAndroid VersionAndroid VersionAndroid VersionAndroid Version"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
