--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBorder">#5D5A53</color>
     <color name="theme_primary">#04561A</color>
     <color name="theme_primary_dark">#002c00</color>
     <color name="theme_accent">#FFB74D</color>
+    <color name="cardview_back_color">#DFDEDB</color>
 </resources>
