--- a/app/src/main/res/layout/eventlist_item.xml
+++ b/app/src/main/res/layout/eventlist_item.xml
@@ -27,9 +27,11 @@
                 android:layout_height="150dp"
                 android:layout_weight="1"
                 android:layout_margin="5dp"
-                android:elevation="4dp"
-                android:paddingLeft="10dp"
+                android:elevation="14dp"
+                android:padding="5dp"
+                android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical"
+                android:background="@color/image_back_color"
                 card_view:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
 
             <LinearLayout
@@ -39,12 +41,12 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/eventIv"
                     android:layout_width="70dp"
                     android:layout_height="27dp"
                     android:layout_marginTop="10dp"
-                    android:layout_gravity="right"
-                    card_view:srcCompat="@android:drawable/star_on" />
+                    android:layout_gravity="right" />
+
                 <TextView
                     android:id="@+id/eventName"
                     android:layout_width="wrap_content"
@@ -54,13 +56,24 @@
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
-                    android:id="@+id/textViewVersion"
+                    android:id="@+id/eventDesc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:paddingLeft="3dp"
+                    android:paddingLeft="6dp"
                     android:text="Android Version Android VersionAndroid VersionAndroid VersionAndroid VersionAndroid Version"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                <TextView
+                    android:id="@+id/eventDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginTop="30dp"
+                    android:paddingRight="6dp"
+                    android:textStyle="bold|italic"
+                    android:text="16-May-19" />
+
 
             </LinearLayout>
 
