--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="650dp"
         android:layout_marginTop="2dp"
+        android:background="@color/cardview_back_color"
         android:padding="1dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintTop_toTopOf="parent"
         tools:context="MainActivity"
         tools:layout_editor_absoluteX="0dp"
