--- a/app/src/main/res/layout/eventlist_item.xml
+++ b/app/src/main/res/layout/eventlist_item.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@color/cardview_back_color"
+    android:layout_height="wrap_content"
     >
     <androidx.cardview.widget.CardView
         android:id="@+id/eventCardView"
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="wrap_content"
         android:elevation="2dp"
         android:layout_margin="5dp"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:layout_constraintVertical_bias="0.64"
+        android:background="@color/cardview_back_color"
         tools:layout_editor_absoluteX="0dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +29,7 @@
                 android:layout_margin="5dp"
                 android:elevation="14dp"
                 android:padding="5dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="5dp"
                 android:layout_gravity="center_vertical"
                 android:background="@color/image_back_color"
                 card_view:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
