--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -26,7 +26,8 @@
     <FrameLayout
         android:id="@+id/donateFrameLayout"
         android:layout_width="match_parent"
-        android:layout_height="600dp">
+        android:layout_height="match_parent"
+        >
         <fragment
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
