--- a/app/src/main/res/layout/collection_widget_list_item.xml
+++ b/app/src/main/res/layout/collection_widget_list_item.xml
@@ -1,11 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:paddingLeft="2dp"
-    android:paddingRight="2dp"
-    android:paddingStart="2dp"
-    android:paddingEnd="2dp"
-    android:minHeight="2dp"
+    android:paddingLeft="@dimen/collection_padding"
+    android:paddingRight="@dimen/collection_padding"
+    android:paddingStart="@dimen/collection_padding"
+    android:paddingEnd="@dimen/collection_padding"
+    android:minHeight="@dimen/collection_padding"
     android:weightSum="2"
     android:id="@+id/widgetItemContainer"
     android:layout_height="wrap_content">
