--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,8 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="toolbar_height">50dp</dimen>
+    <dimen name="height_0dp">0dp</dimen>
+    <dimen name="collection_padding">2dp</dimen>
 
 </resources>
