--- a/app/src/main/res/layout/collection_widget_list_item.xml
+++ b/app/src/main/res/layout/collection_widget_list_item.xml
@@ -15,7 +15,7 @@
         android:gravity="start"
         android:layout_weight="1"
         android:textSize="18dp"
-        android:text="Sample test"
+        android:text="@string/widget_sample_data"
         android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"></TextView>
 
