--- a/app/src/main/res/layout/eventlist_item.xml
+++ b/app/src/main/res/layout/eventlist_item.xml
@@ -52,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="Android Name"
+                    android:text="@string/event_name"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:paddingLeft="6dp"
-                    android:text="Android Version Android VersionAndroid VersionAndroid VersionAndroid VersionAndroid Version"
+                    android:text="@string/event_description"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <TextView
@@ -72,7 +72,7 @@
                     android:layout_marginTop="30dp"
                     android:paddingRight="6dp"
                     android:textStyle="bold|italic"
-                    android:text="16-May-19" />
+                    android:text="@string/event_sample_date" />
 
 
             </LinearLayout>
