--- a/app/src/main/res/layout/fragment_donate_dialog.xml
+++ b/app/src/main/res/layout/fragment_donate_dialog.xml
@@ -11,17 +11,13 @@
     android:elevation="4dp"
     android:padding="10dp">
 
-
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:textStyle="bold"
-        android:text="Donate to Make Madurai Greener" />
-
-
-
+        android:text="@string/donate_screen_title" />
 
     <LinearLayout
         android:id="@+id/checkBoxOuter"
@@ -40,7 +36,7 @@
             android:id="@+id/btnAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add" />
+            android:text="@string/donate_screen_add_btn" />
 
 
     </LinearLayout>
