--- a/app/src/main/res/layout/suvasam_event_widget.xml
+++ b/app/src/main/res/layout/suvasam_event_widget.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content">
         <TextView android:layout_width="match_parent"
             android:id="@+id/widgetTitleLabel"
-            android:text="Suvasam"
+            android:text="@string/widget_title"
             android:textColor="@color/colorAccent"
             android:background="@color/colorPrimary"
             android:textSize="18dp"
