--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -68,6 +68,7 @@
         app:layout_anchorGravity="bottom|right|end"
         android:layout_margin="16dp"
         android:clickable="true"
+        android:focusable="true"
         android:elevation="4dp"
         app:srcCompat="@android:drawable/ic_menu_share"/>
 
