--- a/app/src/main/res/layout/fragment_donate_dialog.xml
+++ b/app/src/main/res/layout/fragment_donate_dialog.xml
@@ -16,6 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:fontFamily="sans-serif"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:text="@string/donate_screen_title" />
 
@@ -32,12 +34,28 @@
             android:orientation="vertical">
 
         </LinearLayout>
-        <Button
-            android:id="@+id/btnAdd"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/donate_screen_add_btn" />
-
+            android:orientation="horizontal"
+            >
+            <Button
+                android:id="@+id/btnAdd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/donate_screen_add_btn" />
+            <Button
+                android:id="@+id/donateCancel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel" />
+            <Button
+                android:id="@+id/reset"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/reset"
+                />
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
